# crusp-variables

./: Cargo.toml  LICENSE  README.md
src/: bool_var.rs  domains.rs  int_var.rs  lib.rs
src/int_var/: values.rs
