[package]
name = "crusp-variables"
version = "0.0.2"
authors = ["Vincent Vigneron <vigneron.vincent.49@gmail.com>"]
edition = "2018"

[dependencies]
crusp-core = { version = "0.0.4", git = "https://github.com/VincentVigneron/crusp-core" , branch = "main"}
crusp-graph = { version = "0.0.3", git = "https://github.com/VincentVigneron/crusp-graph" , branch = "main"}
enumflags2 = "0.7.1"
num = "0.4.0"

