[package]
name = "crusp-variables"
version = "0.0.8"
authors = ["Vincent Vigneron <vigneron.vincent.49@gmail.com>"]
edition = "2018"

[dependencies]
crusp-core = { version = "^0.0.8", git = "https://github.com/VincentVigneron/crusp-core" , branch = "main"}
crusp-graph = { version = "^0.0.7", git = "https://github.com/VincentVigneron/crusp-graph" , branch = "main", features = ["derive"], optional=true}
enumflags2 = "0.7.1"
num = "0.4.0"

[features]
observer = []
graph = ["crusp-graph"]